[package]
name = "sftp"
version = "0.2.2"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "Apache-2.0"
description = "SFTP Client Implementation"
repository = "https://github.com/jelmer/sftp-rs"
homepage = "https://github.com/jelmer/sftp-rs"

[lib]

[dependencies]
byteorder = "1"
ssh2 = { version = "0.9", optional = true }

[features]
ssh2 = ["dep:ssh2"]
