[package]
name = "sftp"
version = "0.3.0"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "Apache-2.0"
description = "SFTP Client Implementation"
repository = "https://github.com/jelmer/sftp-rs"
homepage = "https://github.com/jelmer/sftp-rs"

[lib]

[[bin]]
name = "sftp"
required-features = ["bin"]

[dependencies]
byteorder = "1"
russh = { version = "0.61", optional = true }
rustyline = { version = "18", optional = true }
shell-words = { version = "1", optional = true }
ssh2 = { version = "0.9", optional = true }
tokio = { version = "1", optional = true, features = ["io-util", "rt", "sync", "macros", "time", "net"] }

[features]
default = ["bin"]
bin = ["dep:rustyline", "dep:shell-words"]
ssh2 = ["dep:ssh2"]
async = ["dep:tokio"]
russh = ["async", "dep:russh"]
